# Bushwhack

./: .gitignore  agents.md  conftest.py  docker-compose.redis.yml  orchestration.md  pyproject.toml  pytest.ini  readme.md  requirements.txt
data/processed/: aacr_bench_graph_ready.csv  swe_prbench_graph_ready.csv
data/raw/: aacr_bench_raw.csv
logs/reviewer_agent/4e52bff41e8c/: manifest.csv  run_meta.json
logs/reviewer_agent/65534d560228/: manifest.csv  run_meta.json
logs/reviewer_agent/6ce017369285/: manifest.csv  run_meta.json
logs/reviewer_agent/7092fa9bb7ab/: manifest.csv  run_meta.json
logs/reviewer_agent/abb1921dfc82/: manifest.csv  run_meta.json
logs/reviewer_agent/bd01b3b213df/: manifest.csv  run_meta.json
logs/reviewer_agent/d63456563b5f/: manifest.csv  run_meta.json
logs/reviewer_agent/de880cd87b65/: manifest.csv  run_meta.json
mcp/fs-mcp/: Dockerfile  server.py
mcp/github-mcp/: Dockerfile  server.py
plots/: remote_ast_dump.json  structural_graph.json  structural_topology.json
scripts/: cli.py  review.bat
src/: __init__.py  config.py  main.py
src/data/: __init__.py  aacr_graph_pipeline.py  aacr_graph_plotting.py  loader.py  pr_metrics_analysis.py  run_research_pipeline.py
src/domain/: interfaces.py  schemas.py  state.py
src/infrastructure/: factory.py  remote_review_workflow.py  sandbox.py  structural_graph.py  structural_topology.py
src/orchestration/: context_graph.py  graph.py  reviewer_graph.py
src/reviewer_agent/: __init__.py  main.py
src/solo_agent/: __init__.py  graph.py  main.py  parser.py  prompt.py  worker.py
(+88 files in other folders)
